[gd_scene load_steps=7 format=3 uid="uid://d0r4hjbbpugrg"]

[ext_resource type="Script" path="res://Enemies/WalkerEiltes/WalkerEliteLarge.gd" id="1_62ied"]
[ext_resource type="Material" uid="uid://c7rclt5gsn3gh" path="res://Enemies/Materials/giantEnemy.tres" id="2_5lsg1"]
[ext_resource type="AudioStream" uid="uid://c1mmuvmn0drvy" path="res://Sounds/Effects/can-sliding-across-wooden-desk-98693.mp3" id="3_x8fxo"]
[ext_resource type="AudioStream" uid="uid://o5qfcvw51d2p" path="res://Sounds/Effects/086258_concrete-hit-83770.mp3" id="4_u3gdb"]

[sub_resource type="BoxMesh" id="BoxMesh_b3u8c"]
material = ExtResource("2_5lsg1")
size = Vector3(4, 4, 4)

[sub_resource type="BoxShape3D" id="BoxShape3D_dvwbx"]
size = Vector3(4, 4, 4)

[node name="Large" type="CharacterBody3D" groups=["enemies"]]
script = ExtResource("1_62ied")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
material_override = ExtResource("2_5lsg1")
mesh = SubResource("BoxMesh_b3u8c")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_dvwbx")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 4.2
target_desired_distance = 4.2
path_height_offset = 1.5
avoidance_enabled = true
radius = 2.0

[node name="jumpTimer" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[node name="Audio" type="Node3D" parent="."]

[node name="EnemySpawn" type="AudioStreamPlayer3D" parent="Audio"]
stream = ExtResource("3_x8fxo")
pitch_scale = 0.4
max_distance = 1000.0

[node name="HitPlayer" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4_u3gdb")
volume_db = 3.0
pitch_scale = 0.35
max_polyphony = 2

[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="timeout" from="jumpTimer" to="." method="_on_jump_timer_timeout"]
